# unifi-rs

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/: client.rs  errors.rs  lib.rs
src/models/: client.rs  common.rs  device.rs  mod.rs  site.rs  statistics.rs
tests/: integration_tests.rs
