[package]
name = "unifi-rs"
version = "0.1.15"
edition = "2021"
description = "Rust client for the UniFi Network API"
license = "MIT"
authors = ["Callum Teesdale <callumjamesteesdale@gmail.com>"]
repository = "https://github.com/callumteesdale/unifi-rs"
documentation = "https://docs.rs/unifi-rs"
readme = "README.md"
keywords = ["unifi", "networking", "api-client"]
categories = ["api-bindings", "network-programming"]

[dependencies]
reqwest = { version = "0.11.27", features = ["json", "native-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "1.0.69"
uuid = { version = "1.12.0", features = ["serde", "v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"

[dev-dependencies]
dotenv = "0.15.0"